--- a/NGOConnectPrototype2/Base.lproj/Main.storyboard
+++ b/NGOConnectPrototype2/Base.lproj/Main.storyboard
@@ -161,6 +161,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="oType" id="xIv-LF-NLf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bE3-Fm-5ua">
                                 <rect key="frame" x="38" y="240" width="245" height="30"/>
@@ -177,6 +180,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="mDG" id="pdb-G6-N2k"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qi7-qJ-Ykr">
                                 <rect key="frame" x="38" y="190" width="245" height="30"/>
@@ -185,6 +191,9 @@
                                 <state key="normal" title="Country" backgroundImage="bluebuttonbackground.jpg">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="country" id="uDR-DL-pgO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ucb-t0-pMf">
                                 <rect key="frame" x="38" y="290" width="245" height="30"/>
@@ -193,6 +202,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="geoScope" id="Xt0-K0-ekn"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dC3-DL-gL3">
                                 <rect key="frame" x="38" y="390" width="245" height="30"/>
@@ -201,6 +213,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="cStatus" id="Lnw-FJ-g21"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8kH-dw-ooA">
                                 <rect key="frame" x="64" y="466" width="193" height="30"/>
@@ -221,6 +236,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ovm-Qa-Gal" kind="push" identifier="accreditation" id="twK-LR-kwz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -232,6 +250,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NV1-DS-7m1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1462" y="-447"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="nLr-nT-AQJ">
+            <objects>
+                <tableViewController id="ovm-Qa-Gal" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="hW1-zc-d4e">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="zVR-Vz-0A3">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zVR-Vz-0A3" id="KZh-zT-BNZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ovm-Qa-Gal" id="11E-O3-Six"/>
+                            <outlet property="delegate" destination="ovm-Qa-Gal" id="Slh-3J-VmT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="NP2-S7-WEU"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EUZ-eK-nKz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2058" y="-447"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ddp-Ho-WoA">
@@ -931,6 +978,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="Lnw-FJ-g21"/>
         <segue reference="ahz-li-Opg"/>
         <segue reference="2mg-pR-1KG"/>
     </inferredMetricsTieBreakers>
