--- a/NGOConnectPrototype2/Base.lproj/Main.storyboard
+++ b/NGOConnectPrototype2/Base.lproj/Main.storyboard
@@ -251,22 +251,34 @@
             </objects>
             <point key="canvasLocation" x="1462" y="-447"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Search Selection Table View Controller-->
         <scene sceneID="nLr-nT-AQJ">
             <objects>
-                <tableViewController id="ovm-Qa-Gal" sceneMemberID="viewController">
+                <tableViewController id="ovm-Qa-Gal" customClass="SearchSelectionTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="hW1-zc-d4e">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="zVR-Vz-0A3">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchSelectionCell" id="zVR-Vz-0A3" customClass="SearchSelectionCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zVR-Vz-0A3" id="KZh-zT-BNZ">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8S-d4-Yfx">
+                                            <rect key="frame" x="8" y="11" width="200" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="optionLabel" destination="R8S-d4-Yfx" id="NdO-e3-kx0"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -978,8 +990,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Lnw-FJ-g21"/>
+        <segue reference="twK-LR-kwz"/>
         <segue reference="ahz-li-Opg"/>
-        <segue reference="2mg-pR-1KG"/>
+        <segue reference="X5i-tY-rlk"/>
     </inferredMetricsTieBreakers>
 </document>
